--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "babel-loader": "^6.2.10",
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-react": "^6.22.0",
+    "html-webpack-include-assets-plugin": "0.0.3",
     "html-webpack-plugin": "^2.28.0"
   }
 }
